Reorganise samples paths and project name.

--- a/Sample/CKSetup/CKSetup.csproj
+++ b/Sample/CKSetup/CKSetup.csproj
@@ -15,7 +15,7 @@
   </Target>
 
   <ItemGroup>
-    <ProjectReference Include="..\CK.MQTT.LocalMQTTDemiServer\CK.MQTT.LocalMQTTDemiServer.csproj" />
+    <ProjectReference Include="..\..\CK.MQTT.LocalMQTTDemiServer\CK.MQTT.LocalMQTTDemiServer.csproj" />
   </ItemGroup>
 
 </Project>
