--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.Testing.Monitoring" Version="5.0.1--0003-develop" />
+    <PackageReference Include="Microsoft.Coyote" Version="1.7.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
