--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="16.0.1--0021-develop" />
-    <PackageReference Include="CK.PerfectEvent" Version="17.1.1--0005-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="17.0.0" />
+    <PackageReference Include="CK.PerfectEvent" Version="18.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
