--- a/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
+++ b/CK.MQTT.LowLevelClient/CK.MQTT.LowLevelClient.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <Import Project="..\Common\MQTT.props" />
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -9,10 +9,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.HighPerformance" Version="7.1.2" />
         <PackageReference Include="Nerdbank.Streams" Version="2.8.61" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\CK.MQTT.Abstractions\CK.MQTT.Abstractions.csproj" />
+      <PackageReference Include="System.IO.Pipelines" Version="6.0.3" />
     </ItemGroup>
 
 </Project>
