CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/22.0.2--0002-develop
NuGet:CK.Monitoring.Hosting/17.0.2--0002-develop
NuGet:CK.StObj.Model/22.0.2--0002-develop
NuGet:CK.Testing.Monitoring/6.0.2--0002-develop
NuGet:CK.ActivityMonitor.SimpleSender/17.0.2--0003-develop
NuGet:CK.PerfectEvent/18.0.2--0002-develop
NuGet:cksetup/18.0.2--0002-develop.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="17.0.1" />
-    <PackageReference Include="CK.PerfectEvent" Version="18.0.1" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="17.0.2--0003-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="18.0.2--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
