--- a/Sample/Demo.DemiServer/Demo.DemiServer.csproj
+++ b/Sample/Demo.DemiServer/Demo.DemiServer.csproj
@@ -6,8 +6,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring.Hosting" Version="17.0.2--0008-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="22.0.2--0007-develop" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="17.1.0" />
+    <PackageReference Include="CK.StObj.Model" Version="22.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
