--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -9,12 +9,12 @@
     <Nullable>annotations</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NuGet.Credentials" Version="6.2.1" />
+    <PackageReference Include="NuGet.Credentials" Version="6.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Core" Version="16.0.1--0001-develop" />
-    <PackageReference Include="NUnit.ConsoleRunner" Version="3.15.2" />
+    <PackageReference Include="CK.Core" Version="16.1.1" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.3" />
     <PackageReference Include="NUnit.Runners.Net4" Version="2.6.4" />
-    <PackageReference Include="SimpleGitVersion.Cake" Version="8.0.0" />
+    <PackageReference Include="SimpleGitVersion.Cake" Version="9.0.0" />
   </ItemGroup>
 </Project>
