Releasing 0.19.0. Upgrading release dependencies: NuGet:CK.StObj.Model/24.0.0, NuGet:CK.Monitoring.Hosting/19.0.0, NuGet:CK.StObj.Model/24.0.0, NuGet:CK.Testing.Monitoring/8.0.0, NuGet:CK.ActivityMonitor.SimpleSender/19.0.0, NuGet:CK.PerfectEvent/20.0.0, NuGet:cksetup/20.0.0.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="18.0.1--0061-develop" />
-    <PackageReference Include="CK.PerfectEvent" Version="19.0.1--0051-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="19.0.0" />
+    <PackageReference Include="CK.PerfectEvent" Version="20.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
