--- a/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
+++ b/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0163-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="24.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.Server\CK.MQTT.Server.csproj" />
