CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/24.1.1--0005-develop
NuGet:CK.Monitoring.Hosting/19.0.2--0003-develop
NuGet:CK.StObj.Model/24.1.1--0005-develop
NuGet:CK.Testing.Monitoring/8.0.2--0003-develop
NuGet:CK.ActivityMonitor.SimpleSender/19.0.2--0003-develop
NuGet:CK.PerfectEvent/20.0.2--0003-develop
NuGet:cksetup/20.0.2--0003-develop.

--- a/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
+++ b/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-    <PackageReference Include="CK.StObj.Model" Version="24.1.0" />
+    <PackageReference Include="CK.StObj.Model" Version="24.1.1--0005-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.Server\CK.MQTT.Server.csproj" />
