--- a/Sample/Demo.DemiServer/Demo.DemiServer.csproj
+++ b/Sample/Demo.DemiServer/Demo.DemiServer.csproj
@@ -6,8 +6,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring.Hosting" Version="19.0.2--0005-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="24.2.2--0002-develop" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="19.0.1" />
+    <PackageReference Include="CK.StObj.Model" Version="24.2.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
