--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="19.0.1" />
-    <PackageReference Include="CK.PerfectEvent" Version="20.0.1" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="19.0.2--0007-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="20.0.2--0007-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
