Releasing 0.22.0. Upgrading release dependencies: NuGet:CK.StObj.Model/24.3.0, NuGet:CK.Monitoring.Hosting/19.0.1, NuGet:CK.StObj.Model/24.3.0, NuGet:CK.Testing.Monitoring/8.1.0, NuGet:CK.ActivityMonitor.SimpleSender/19.0.1, NuGet:CK.PerfectEvent/20.0.1, NuGet:cksetup/20.1.0.

--- a/Sample/Demo.DemiServer/Demo.DemiServer.csproj
+++ b/Sample/Demo.DemiServer/Demo.DemiServer.csproj
@@ -6,8 +6,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring.Hosting" Version="19.0.2--0007-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="24.2.3--0002-develop" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="19.0.1" />
+    <PackageReference Include="CK.StObj.Model" Version="24.3.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
