--- a/Sample/Demo.DemiServer/Demo.DemiServer.csproj
+++ b/Sample/Demo.DemiServer/Demo.DemiServer.csproj
@@ -6,8 +6,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring.Hosting" Version="20.0.0" />
-    <PackageReference Include="CK.StObj.Model" Version="25.0.0" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="20.0.1--0003-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="25.0.1--0057-develop" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
