--- a/CK.MQTT.Server/CK.MQTT.Server.csproj
+++ b/CK.MQTT.Server/CK.MQTT.Server.csproj
@@ -1,13 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="..\Common\MQTT.props" />
-
-    <PropertyGroup>
-        <TargetFramework>net6</TargetFramework>
-        <Description>MQTT server implementation (not yet available).</Description>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
-    </ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\Common\MQTT.props" />
+  <PropertyGroup>
+    <TargetFramework>net6</TargetFramework>
+    <Description>MQTT server implementation (not yet available).</Description>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CK.MQTT.Client\CK.MQTT.Client.csproj" />
+  </ItemGroup>
 </Project>
