--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="20.0.1--0014-develop" />
-    <PackageReference Include="CK.PerfectEvent" Version="21.0.1--0023-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="21.0.0" />
+    <PackageReference Include="CK.PerfectEvent" Version="22.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
