--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="21.0.0" />
-    <PackageReference Include="CK.PerfectEvent" Version="22.0.0" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="0.0.0--04ytpis-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--04ytpiv-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
