--- a/Sample/Demo.DemiServer/Demo.DemiServer.csproj
+++ b/Sample/Demo.DemiServer/Demo.DemiServer.csproj
@@ -5,8 +5,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring.Hosting" Version="0.0.0--04ytpis-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04ytpiy-develop" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="0.0.0--04ytqpj-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04ytqpo-develop" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
