CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/0.0.0--04yy0m2-develop
NuGet:CK.Testing.Monitoring/0.0.0--04yy09q-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04ytqpj-develop
NuGet:CK.PerfectEvent/0.0.0--04yy0m0-develop.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="0.0.0--04ytqpj-develop" />
-    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--04ytqpl-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--04yy0m0-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
