CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/0.0.0--04yy55n-develop
NuGet:CK.Testing.Monitoring/0.0.0--04yy55i-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--04yy55f-develop
NuGet:CK.PerfectEvent/0.0.0--04yy55k-develop.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="0.0.0--04ytqpj-develop" />
-    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--04yy0m0-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="0.0.0--04yy55f-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--04yy55k-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
