--- a/Tests/CK.MQTT.Basic.Tests/CK.MQTT.Basic.Tests.csproj
+++ b/Tests/CK.MQTT.Basic.Tests/CK.MQTT.Basic.Tests.csproj
@@ -4,7 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zi8x1-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zrd95-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="System.IO.Pipelines" Version="8.0.0" />
