--- a/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
+++ b/CK.MQTT.LocalMQTTDemiServer/CK.MQTT.LocalMQTTDemiServer.csproj
@@ -5,7 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-    <PackageReference Include="CK.StObj.Model" Version="26.0.1" />
+    <PackageReference Include="CK.StObj.Model" Version="26.0.2--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.Server\CK.MQTT.Server.csproj" />
