Releasing 0.24.2. Upgrading release dependencies: NuGet:CK.StObj.Model/26.0.2, NuGet:CK.Monitoring.Hosting/21.0.1, NuGet:CK.StObj.Model/26.0.2, NuGet:CK.Testing.Monitoring/10.0.1, NuGet:CK.ActivityMonitor.SimpleSender/21.0.1, NuGet:CK.PerfectEvent/22.0.1, NuGet:cksetup/22.0.2.

--- a/Sample/Demo.DemiServer/Demo.DemiServer.csproj
+++ b/Sample/Demo.DemiServer/Demo.DemiServer.csproj
@@ -5,8 +5,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring.Hosting" Version="21.0.1--0004-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="26.0.2--0001-develop" />
+    <PackageReference Include="CK.Monitoring.Hosting" Version="21.0.1" />
+    <PackageReference Include="CK.StObj.Model" Version="26.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
