--- a/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
+++ b/Tests/CK.MQTT.Client.Tests/CK.MQTT.Client.Tests.csproj
@@ -5,7 +5,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--052zkui-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053bu1w-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
