CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/0.0.0--053i1ze-develop
NuGet:CK.Testing.Nunit/0.0.0--053i1z8-develop
NuGet:CK.Testing.Nunit/0.0.0--053i1z8-develop
NuGet:CK.ActivityMonitor.SimpleSender/0.0.0--053i1z6-develop
NuGet:CK.PerfectEvent/0.0.0--053i1za-develop.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="0.0.0--053czwm-develop" />
-    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--053czwp-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="0.0.0--053i1z6-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--053i1za-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
