--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="0.0.0--053i1z6-develop" />
-    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--053ij2d-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--053ijhz-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
