CI build: Upgrading dependencies:
NuGet:CK.StObj.Model/30.0.1--0001-develop
NuGet:CK.Testing.Nunit/13.0.1--0001-develop
NuGet:CK.Testing.Nunit/13.0.1--0001-develop
NuGet:CK.ActivityMonitor.SimpleSender/24.0.1--0001-develop
NuGet:CK.PerfectEvent/25.0.1--0001-develop.

--- a/CK.MQTT.Client/CK.MQTT.Client.csproj
+++ b/CK.MQTT.Client/CK.MQTT.Client.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="24.0.0" />
-    <PackageReference Include="CK.PerfectEvent" Version="25.0.0" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="24.0.1--0001-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="25.0.1--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.MQTT.LowLevelClient\CK.MQTT.LowLevelClient.csproj" />
